[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/objects/key/Key.gd" type="Script" id=1]
[ext_resource path="res://assets/objects/KeyIcons.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, -8 ), Vector2( 0, -16 ), Vector2( 0, -8 ), Vector2( 0, -16 ), Vector2( 0, -8 ), Vector2( 0, -16 ), Vector2( 0, -8 ) ]
}

[node name="Key" type="Area2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 96, 0, 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/default = SubResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Key_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Key_body_exited"]
[connection signal="animation_finished" from="Anim" to="." method="_on_Anim_animation_finished"]
